--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,11 +5,10 @@
     android:orientation="vertical"
      >
 
-
-    <Button
-        android:id="@+id/goto_custom_scheme"
+    <WebView
+        android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="GOTO -> rat://view?pid=prodno" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
+
